# Just-another-graphics-render-engine

./: README.md
src/: CMakeLists.txt  JAGRE.cpp  JAGRE.h  JAGRE.h.in
src/Math/: Cartesian3D.cpp  Cartesian3D.h  MyPoint.cpp  MyPoint.h  MyTuple.cpp  MyTuple.h  MyVector.cpp  MyVector.h  Vectors.cpp  Vectors.h
